# kmap_web_service

./: Cargo.toml  README.md  sentinel.conf  start_redis_sentinel_for_development.sh
config/: default.toml
src/: config.rs  main.rs
src/errors/: mod.rs  response.rs  worker.rs
src/handlers/: auth.rs  dashboard.rs  mod.rs  task.rs
src/kmap_algorithms/: kmer_count.rs  mod.rs
src/middleware/: auth.rs  mod.rs
src/models/: forms.rs  mod.rs  task.rs  user.rs
src/services/: mod.rs  redis_service.rs
src/worker/: mod.rs  worker.rs
templates/: login.html  processing.html  upload.html  user_dashboard.html
